Maybe fix buttons on iphone SE? IDK.

--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ keyboard button {
   border-radius: 0.4em;
   flex: 1 1 1.5em;
   font-size: inherit;
+  min-width: 0;
+  padding: 0;
+  text-align: center;
+  overflow: hidden;
 }
 
 keyboard button.↵,
